Fix color to have better visibility

--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #414246;
+  background-color: #2e2e2e;
   color: white;
   padding: 0.8em;
 }
